2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ip4-routes-dialog.c
		- (ip4_routes_dialog_new, ip4_routes_dialog_update_setting): get and
			set never-default accordingly

	* src/connection-editor/ce-page-ip4.glade
		- Add never-default checkbox to the IP4 routes dialog

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/main.c
		- (impl_start): bring connection editor window to front when it's
			launched again, if it's already started

	* src/connection-editor/nm-connection-list.c
	  src/connection-editor/nm-connection-list.h
		- (nm_connection_list_present): no longer static

2008-12-05  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_clear_private_connection_values): new function to clear
			applet private values from a connection

	* src/connection-editor/page-wired-security.c
		- (ce_page_wired_security_new): ensure setting gets updated when
			security is changed
		- (validate): copy applet private values to the real connection when
			using 802.1x security; clear applet private values when there's no
			security

	* src/connection-editor/page-wireless-security.c
		- (validate): clear applet private values when there's no security

2008-11-26  Dan Williams  <dcbw@redhat.com>

	* Release 0.7

2008-11-26  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (nma_gconf_connection_class_init): update for delete -> do_delete

2008-11-25  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (nma_gconf_connection_changed): fill connection certs before functions
			that verify them, since pkcs#12 needs special client cert/private key
			handling; don't leak a connection hash

	* src/utils/utils.c
		- (utils_fill_connection_certs): handle pkcs#12 private keys and set
			client cert at the same time

2008-11-24  Dan Williams  <dcbw@redhat.com>

	Patch from Tony Houghton <h@realh.co.uk>  (bgo #455250)